styled jumbotron and cards, team.html now outputs to output directory.

--- a/output/team.html
+++ b/output/team.html
@@ -51,7 +51,43 @@
     <div class="container">
         <div class="team-area col-12 d-flex justify-content-center">
             <div class="row">
-                {{ team }}
+                <div class="col-sm">
+    <div class="card text-white bg-danger mb-3" style="max-width: 18rem;">
+        <div class="card-header">Manager</div>
+        <div class="card-body">
+            <h5 class="card-title">Bob Loblaw</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item text-dark bg-light bg-gradient">ID: 1111</li>
+                <li class="list-group-item text-dark bg-light bg-gradient">Email:<br> bobloblaw@bobslawblog.com</li>
+                <li class="list-group-item text-dark bg-light bg-gradient">Office: 9999</li>
+            </ul>
+        </div>
+    </div>
+</div><div class="col-sm">
+    <div class="card text-white bg-primary bg-gradient mb-3" style="max-width: 18rem;">
+        <div class="card-header">Engineer</div>
+        <div class="card-body">
+            <h5 class="card-title">Angie</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item text-dark bg-light bg-gradient">ID: 2222</li>
+                <li class="list-group-item text-dark bg-light bg-gradient">Email:<br> angie@angie.com</li>
+                <li class="list-group-item text-dark bg-light bg-gradient">Github: angieneer</li>
+            </ul>
+        </div>
+    </div>
+</div><div class="col-sm">
+    <div class="card text-white  bg-info bg-gradient mb-3" style="max-width: 18rem;">
+        <div class="card-header">Intern</div>
+        <div class="card-body">
+            <h5 class="card-title">Moriah C.</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item text-dark bg-light bg-gradient">ID: 3333</li>
+                <li class="list-group-item text-dark bg-light bg-gradient">Email:<br> Moe@gmail.com</li>
+                <li class="list-group-item text-dark bg-light bg-gradient">School: University of Oklahoma</li>
+            </ul>
+        </div>
+    </div>
+</div>
             </div>
         </div>
     </div>
