added descriptive comments

--- a/output/team.html
+++ b/output/team.html
@@ -15,7 +15,7 @@
         .col-sm {
             min-width: 300px;
         }
-
+    
         .card {
             background: rgba(229, 1, 1, 0.80);
             box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -24,7 +24,7 @@
             border-radius: 10px;
             border: 1px solid rgba(255, 255, 255, 0.18);
         }
-
+    
         .jumbotron {
             background-image: url(https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80);
             background-position: 50% 25%;
@@ -51,77 +51,43 @@
     <div class="container">
         <div class="team-area col-12 d-flex justify-content-center">
             <div class="row">
-                <div class="col-sm-3">
-                    <div class="card text-white bg-danger mb-3" style="max-width: 18rem;">
-                        <div class="card-header">Manager </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Moe</h5>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item text-dark bg-light bg-gradient">ID: 1111</li>
-                                <li class="list-group-item text-dark bg-light bg-gradient">Email:<br> <a
-                                        href="mailto:ydefrawi@gmail.com">ydefrawi@gmail.com</a></li>
-                                <li class="list-group-item text-dark bg-light bg-gradient">Office: 333</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="card text-white bg-primary bg-gradient mb-3" style="max-width: 18rem;">
-                        <div class="card-header">Engineer</div>
-                        <div class="card-body">
-                            <h5 class="card-title">bob</h5>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item text-dark bg-light bg-gradient">ID: 1111</li>
-                                <li class="list-group-item text-dark bg-light bg-gradient">Email:<br> <a
-                                        href="mailto:dk@lkjd.com">dk@lkjd.com</a></li>
-                                <li class="list-group-item text-dark bg-light bg-gradient">Github: <a
-                                        href="https://github.com/bob">bob</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="card text-white  bg-info bg-gradient mb-3" style="max-width: 18rem;">
-                        <div class="card-header">Intern</div>
-                        <div class="card-body">
-                            <h5 class="card-title">Intern</h5>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item text-dark bg-light bg-gradient">ID: 3333</li>
-                                <li class="list-group-item text-dark bg-light bg-gradient">Email: <br><a
-                                        href="mailto:intern@gmail.com">intern@gmail.com</a></li>
-                                <li class="list-group-item text-dark bg-light bg-gradient">School: UT Austin</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="card text-white  bg-info bg-gradient mb-3" style="max-width: 18rem;">
-                        <div class="card-header">Intern</div>
-                        <div class="card-body">
-                            <h5 class="card-title">Intern</h5>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item text-dark bg-light bg-gradient">ID: 3333</li>
-                                <li class="list-group-item text-dark bg-light bg-gradient">Email: <br><a
-                                        href="mailto:intern@gmail.com">intern@gmail.com</a></li>
-                                <li class="list-group-item text-dark bg-light bg-gradient">School: UT Austin</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="card text-white  bg-info bg-gradient mb-3" style="max-width: 18rem;">
-                        <div class="card-header">Intern</div>
-                        <div class="card-body">
-                            <h5 class="card-title">Intern</h5>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item text-dark bg-light bg-gradient">ID: 3333</li>
-                                <li class="list-group-item text-dark bg-light bg-gradient">Email: <br><a
-                                        href="mailto:intern@gmail.com">intern@gmail.com</a></li>
-                                <li class="list-group-item text-dark bg-light bg-gradient">School: UT Austin</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                <div class="col-sm">
+    <div class="card text-white bg-danger mb-3" style="max-width: 18rem;">
+        <div class="card-header">Manager </div>
+        <div class="card-body">
+            <h5 class="card-title">Bob Loblaw</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item text-dark bg-light bg-gradient">ID: 1</li>
+                <li class="list-group-item text-dark bg-light bg-gradient">Email:<br> <a href="mailto:loblaw@lawblog.com">loblaw@lawblog.com</a></li>
+                <li class="list-group-item text-dark bg-light bg-gradient">Office: 34</li>
+            </ul>
+        </div>
+    </div>
+</div><div class="col-sm">
+    <div class="card text-white bg-primary bg-gradient mb-3" style="max-width: 18rem;">
+        <div class="card-header">Engineer</div>
+        <div class="card-body">
+            <h5 class="card-title">Angie Near</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item text-dark bg-light bg-gradient">ID: 2</li>
+                <li class="list-group-item text-dark bg-light bg-gradient">Email:<br> <a href="mailto:angie@stuff.com">angie@stuff.com</a></li>
+                <li class="list-group-item text-dark bg-light bg-gradient">Github: <a href="https://github.com/angieneer">angieneer</a></li>
+            </ul>
+        </div>
+    </div>
+</div><div class="col-sm">
+<div class="card text-white  bg-info bg-gradient mb-3" style="max-width: 18rem;">
+    <div class="card-header">Intern</div>
+    <div class="card-body">
+        <h5 class="card-title">Dereck McUnderpaid</h5>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item text-dark bg-light bg-gradient">ID: 3</li>
+            <li class="list-group-item text-dark bg-light bg-gradient">Email: <br> <a href="mailto:derek@gmail.com">derek@gmail.com</a></li>
+            <li class="list-group-item text-dark bg-light bg-gradient">School: Houston Community College</li>
+        </ul>
+    </div>
+</div>
+</div>
             </div>
         </div>
     </div>
